--- a/app/views/spree/admin/products/_featured_switch.html.erb
+++ b/app/views/spree/admin/products/_featured_switch.html.erb
@@ -1,6 +1,7 @@
 <td>
 	<div class="switch_error">
-		<span class="glyphicon glyphicon-exclamation-sign text-danger lead" data-toggle="tooltip" data-placement="top" title="<%= Spree.t(:'featured.ajax_error') %>"></span>
+		<span class="glyphicon glyphicon-exclamation-sign text-danger lead" data-toggle="tooltip"
+              data-placement="top" title="<%= Spree.t(:featured_ajax_error) %>"></span>
 	</div>
 
 	<%= form_for [:admin, product], :method => :put do |f| %>
